added index page for events

--- a/app/config.toml
+++ b/app/config.toml
@@ -12,6 +12,7 @@
 "transaction" = "merchant/retail_transaction_api.html"
 "loyalty_management" = "events/loyalty_management/async/index.html"
 "reporting_mi" = "events/reporting_mi/async/index.html"
+"events" = "events/index.html"
 #"transaction_processing" = "events/transaction_processing/async/index.html"
 
 "appendix" = "extras/appendix.html"
