changed webhook api

--- a/webhook/webhook.yaml
+++ b/webhook/webhook.yaml
@@ -1,6 +1,6 @@
 openapi: 3.1.0
 servers: 
-  - url: https://retail.gb.bink.com/webhooks/"
+  - url: https://retail.gb.bink.com/webhooks
     description: "Retail sandbox server"
 info:
   version: 1.0.0
@@ -21,92 +21,98 @@ info:
     "
   x-logo: 
     url: https://logos.bink.com/img/logos/mono-teal.png    
-paths: 
-  /retailers/{retailer_id}/webhook_endpoints:
-    post:
-      security: 
-        - ApiKeyAuth: [] 
-      tags:
-        - Webhook endpoints
-      summary: "Create a webhook endpoint"
-      description: "Create a webhook endpoint to be notified about events that happen in your enrolled retailer."
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/WebhookEndpoint'
-      parameters:
-        - in: path
-          name: retailer_id
-          description: "The unique identifier for the retailer. Bink will provide this value to you."
-          required: true
-          schema:
-            type: string
-      responses: 
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  webhook_id: 
-                    type: number
-                    example: 123
-        '401':
-          $ref: '../common/components.yaml#/components/responses/Error401'
-        '403':
-          description: Forbidden 
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error_message: 
-                    type: string
-                    example: "You are not authorized to access this resource"
-                  error_slug: 
-                    type: string
-                    example: "not_authorized"
-        '422':
-          $ref: '../common/components.yaml#/components/responses/Error422'  
-  /retailers/{retailer_id}/webhook_endpoints/{webhook_id}:
-    patch:
-      security: 
-        - ApiKeyAuth: []
-      tags:
-        - Webhook endpoints
-      summary: "Update a webhook endpoint"
-      description: "Update a webhook endpoint "       
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/WebhookEndpoint'
-      parameters:
-        - in: path
-          name: retailer_id
-          description: "The unique identifier for the retailer. Bink will provide this value to you."
-          required: true
-          schema:
-            type: string
-      responses: 
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  webhook_id: 
-                    type: number
-                    example: 123
-        '401':
-          $ref: '../common/components.yaml#/components/responses/Error401'
-        '403':
-          $ref: '../common/components.yaml#/components/responses/Error403'
-        '422':
-          $ref: '../common/components.yaml#/components/responses/Error422'
+#paths: 
+#  /retailers/{retailer_id}/webhook_endpoints:
+#    post:
+#      security: 
+#        - ApiKeyAuth: [] 
+#      tags:
+#        - Webhook endpoints
+#      summary: "Create a webhook endpoint"
+#      description: "Create a webhook endpoint to be notified about events that happen in your enrolled retailer."
+#      requestBody:
+#        content:
+#          application/json:
+#            schema:
+#              $ref: '#/components/schemas/WebhookEndpoint'
+#      parameters:
+#        - in: path
+#          name: retailer_id
+#          description: "The unique identifier for the retailer. Bink will provide this value to you."
+#          required: true
+#          schema:
+#            type: string
+#      responses: 
+#        '200':
+#          description: OK
+#          content:
+#            application/json:
+#              schema:
+#                type: object
+#                properties:
+#                  webhook_id: 
+#                    type: number
+#                    example: 123
+#        '401':
+#          $ref: '../common/components.yaml#/components/responses/Error401'
+#        '403':
+#          description: Forbidden 
+#          content:
+#            application/json:
+#              schema:
+#                type: object
+#                properties:
+#                  error_message: 
+#                    type: string
+#                    example: "You are not authorized to access this resource"
+#                  error_slug: 
+#                    type: string
+#                    example: "not_authorized"
+#        '422':
+#          $ref: '../common/components.yaml#/components/responses/Error422'  
+#  /retailers/{retailer_id}/webhook_endpoints/{webhook_id}:
+#    patch:
+#      security: 
+#        - ApiKeyAuth: []
+#      tags:
+#        - Webhook endpoints
+#      summary: "Update a webhook endpoint"
+#      description: "Update a webhook endpoint "       
+#      requestBody:
+#        content:
+#          application/json:
+#            schema:
+#              $ref: '#/components/schemas/WebhookEndpoint'
+#      parameters:
+#        - in: path
+#          name: retailer_id
+#          description: "The unique identifier for the retailer. Bink will provide this value to you."
+#          required: true
+#          schema:
+#            type: string
+#        - in: path
+#          name: webhook_id
+#          description: "The unique identifier for the webhook. Bink will provide this value to you."
+#          required: true
+#          schema:
+#            type: string
+#      responses: 
+#        '200':
+#          description: OK
+#          content:
+#            application/json:
+#              schema:
+#                type: object
+#                properties:
+#                  webhook_id: 
+#                    type: number
+#                    example: 123
+#        '401':
+#          $ref: '../common/components.yaml#/components/responses/Error401'
+#        '403':
+#          $ref: '../common/components.yaml#/components/responses/Error403'
+#        '422':
+#          $ref: '../common/components.yaml#/components/responses/Error422'
 webhooks:
   Identified Transaction Webhook: 
     post:
@@ -169,5 +175,5 @@ components:
   securitySchemes:
     ApiKeyAuth:      
       type: apiKey
-      in: header     
-      name: X-API-KEY
+      in: header
+      name: X-API-KEY    
